# ChestFlow

./: .gitignore  PROGRESSO_SESSAO.md  README.md  desktop.ini  electron-main.js  electron-preload.js  index.html  package-lock.json  package.json  pgsql  preload.js  vite.config.js
backend/: Cargo.toml
backend/src/: commands.rs  db.rs  main.rs  models.rs
electron/: main.js  preload.js
migrations/: 001_init.sql  002_add_recorrente.sql  003_add_budgets_and_goals.sql  004_add_category_icons.sql
src/: categories.js  main.js  renderer.js  style.css  utils.js
src-tauri/: build.rs  cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs
src/components/: README.md  charts.js  modal.js  toast.js
src/config/: categories.js
src/pages/: README.md  dashboard.js  expenses.js  investments.js  reports.js  revenues.js
src/services/: api.js
src/styles/: base.css  components.css  index.css  layout.css  variables.css
src/utils/: formatters.js  masks.js
